@@ -249,6 +249,7 @@ class MysqlUpdater extends DatabaseUpdater {
 				'patch-logging_user_text_type_time_index.sql' ),
 			array( 'addIndex', 'logging', 'log_user_text_time', 'patch-logging_user_text_time_index.sql' ),
 			array( 'addField', 'page', 'page_links_updated', 'patch-page_links_updated.sql' ),
+			array( 'addField', 'user', 'user_password_expires', 'patch-user_password_expire.sql' ),
 		);
 	}
 
